Added DTO and Some Fixes